hide document menu element when not expanded to avoid layout problems

--- a/src/css/html.css
+++ b/src/css/html.css
@@ -211,6 +211,10 @@ object {
   transition: margin-left 0.3s;
 }
 
+main:not(.menu-expanded) #menu {
+  visibility: hidden;
+}
+
 .menu-expanded #menu > div {
   margin-left: 0;
 }
